--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -4,10 +4,12 @@
 body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-  }
+    overflow-x: hidden;
+}
 main {
+    margin: 0;
     width: 100%;
+    height: 100%;
     font-family: "Roboto", sans-serif;
   }
 section {
@@ -45,8 +47,7 @@ ul {
     font-size: 22px;
   } 
 .entete {
-    position: absolute;
-    height: 100%;
+    height: 60vh;
     width: 100%;
 }
 .entete img {
@@ -57,8 +58,8 @@ ul {
 }
 .fond-couleur {
     background-color: #f7f7f7;
-    position: relative;
-    top: 40vh;
+    position: absolute;
+    top: 30vh;
     width: 100%;
     height: auto;
     border-radius: 3rem 3rem 0 0;
@@ -118,11 +119,10 @@ ul {
 }
 .coeur-plein{
     color: transparent;
-    background: linear-gradient(#FF79DA, #9356DC);
     transform-origin: bottom;
     background-size: cover;
-    background-position: center;
-    background-clip: text;
+    background: linear-gradient(#FF79DA, #9356DC) center;
+    background-clip: content-box;
     -webkit-background-clip: text;
     opacity: 0;
     transition-duration: 1s;
@@ -253,11 +253,12 @@ ul {
     align-items: center;
     justify-content: center;
     height: 100%;
+    /*width: 30px;*/
     width: 15%;
     padding-right: 2rem;
     position: absolute;
     top: 0;
-    right: -24%;
+    right: -25%;
     border-radius: 0 1rem 1rem 0;
     visibility: hidden;
 }
@@ -295,8 +296,6 @@ ul {
 footer {
     background-color: #020202;
     color: #fff;
-    position: relative;
-    top: 40vh;
     width: 100%;
     height: 12rem;
 }
@@ -325,7 +324,12 @@ ul {
 /* ********************* Media Query Tablette ********************* */
 /* **************************************************************** */
 @media (min-width: 768px) and (max-width: 992px) {
-    
+.entete{
+    height: 550px;
+}
+.fond-couleur{
+    top: 350px;
+}
 /* Média Query Entête Restaurants  */
 .logo-entete-next {
     display: flex;
@@ -392,7 +396,15 @@ ul {
 /* ********************* Media Query Desktop ********************* */
 /* **************************************************************** */
 @media (min-width: 993px) {
-
+footer{
+    height: 12.5rem;
+}
+.plats p::after, .desserts p::after{
+    margin-left: 2%;
+}
+.entete{
+    height: 550px;
+}
 /*********** Média Query Desktop Entête Restaurants ****************/
 .logo-entete-next {
     display: flex;
@@ -400,6 +412,10 @@ ul {
     font-size: 2.5rem;
     height: 3rem;
     margin-bottom: 1.25rem;
+
+}
+.logo-entete-next a{
+    width: 40%;
 }
 .logo-entete-next i{
     font-size: 30px;  
@@ -418,11 +434,24 @@ ul {
     object-position: center;
 }
 .fond-couleur{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 95%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    top: 300px;
+    width: 100%;
     margin: auto;
 }
+.menu-flex{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.entrees, .plats, .desserts{
+    width: 30%;
+}
+
+
 .nom-restaurant{
     grid-row: 1 / 2;
     grid-column: 1 / -1;
@@ -444,11 +473,26 @@ ul {
     margin-left: 4%;
     left: 0.5rem;
 }
+.entrees > p::after {
+    content: "";
+    left: 0.5rem;
+}
+.menu-texte h3, .menu-texte p{
+    margin: 3% 0 0 4%;
+    height: 50%;
+    white-space: nowrap;
+    overflow: hidden;
+    /*text-overflow: ellipsis;*/
+}
 .plats p:first-child {
     margin-left: auto;
 }
 .plats p::after {
     left: 2rem;
+}
+.plats > p::after {
+    content: "";
+    left: 0.8rem;
 }
 .desserts p:first-child{
     margin-left: auto;
@@ -456,9 +500,17 @@ ul {
 .desserts p::after {
     left: 2rem;
 }
+.desserts > p::after {
+    content: "";
+    left: 1rem;
+}
+.menu-prix{
+     width: 20%;
+    margin-right: 15%;
+ }
 .check{
-    width: 11%;
-    right: -18%;
+    width: 10%;
+    right: -20%;
 }
 
 /********* Média Query Desktop pied de page *****************/
