--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -72,13 +72,13 @@ ul {
     width: 100%;
     border-radius: 3rem 3rem 0 0;
 }
-.menus-restaurants{
+.menus-restaurants {
     animation-name: menu;
     animation-duration: 2s;
     cursor: pointer;
 }
 
-@keyframes menu{
+@keyframes menu {
     0% {
     transform: translateY(75%);
     opacity: 0;
@@ -93,7 +93,7 @@ ul {
 }
     }
 
-.gout{
+.gout  {
     display: flex;
     width: 90%;
     font-size: 20px;
@@ -107,17 +107,17 @@ ul {
     margin-bottom: 8%;
     font-size: 1.8rem;
 }
-.coeur-vide:hover .coeur-plein{
+.coeur-vide:hover .coeur-plein {
     opacity: 1;
 }
-.coeur-vide:hover{
+.coeur-vide:hover {
     color: #f7f7f7;
 }
-.coeur-vide{
+.coeur-vide {
     position: relative;
     color: #020202
 }
-.coeur-plein{
+.coeur-plein {
     color: transparent;
     transform-origin: bottom;
     background-size: cover;
@@ -136,7 +136,7 @@ ul {
     flex-direction: column;
     align-items: center;
 }
-.entrees p:first-child{
+.entrees p:first-child {
     align-items: flex-start;
     text-transform: uppercase;
     margin-bottom: 25px;
@@ -158,7 +158,7 @@ ul {
     align-items: center;
     padding-bottom: 5%;
 }
-.plats p:first-child{
+.plats p:first-child {
     align-items: flex-start;
     text-transform: uppercase;
     margin-bottom: 25px;
@@ -179,7 +179,7 @@ ul {
     flex-direction: column;
     align-items: center;
 }
-.desserts p:first-child{
+.desserts p:first-child {
     align-items: flex-start;
     text-transform: uppercase;
     margin-bottom: 25px;
@@ -215,7 +215,7 @@ ul {
     flex-direction: column;
     border-radius: 1rem 0 0 1rem ;
 }
-.menu-texte h3, .menu-texte p{
+.menu-texte h3, .menu-texte p {
     margin: 2% 0 0 3%;
     height: 50%;
     white-space: nowrap;
@@ -245,7 +245,7 @@ ul {
     transform: scale(1.01);
     cursor: pointer;
 }
-.check{
+.check {
     color: white;
     font-size: 25px;
     background-color: #99E2D0;
@@ -266,11 +266,11 @@ ul {
     width: 60%;
     border-radius: 1rem 0 0 1rem;
 }
-.menus-restaurants:hover .check{
+.menus-restaurants:hover .check {
     visibility: visible;
     animation: translation-gauche 0.5s ease-out forwards;
 }
-.menus-restaurants:hover .fa-check-circle{
+.menus-restaurants:hover .fa-check-circle {
     animation: rotation 0.8s ease 0.3s forwards;
 }
 
@@ -299,7 +299,7 @@ footer {
     width: 100%;
     height: 12rem;
 }
-.logo-footer{
+.logo-footer {
     font-family: "Shrikhand", "cursive";
     padding-top: 5%;
 }
@@ -312,22 +312,48 @@ ul {
 .fa-utensils {
     margin-right: 10px;
 }
-.active{
+.active {
     text-decoration: none;
     color: white;
 }
-.active:hover{
+.active:hover {
     color: #99E2D0;
 }
 
+/************************************/
+/****** Média Query Smartphone ******/
+/************************************/
+
+@media (min-width: 565px) and (max-width: 767px) {
+.entrees > p::after {
+    content: "";
+    left: 1rem;
+}
+.plats > p::after {
+    content: "";
+    left: 1rem;
+}
+.desserts > p::after {
+    content: "";
+    left: 1rem;
+}
+.menu-prix {
+    width: 21%;
+    margin-right: 10%;
+}
+.check {
+    width: 9%;
+    right: -15%;
+}
+}
 /* **************************************************************** */
 /* ********************* Media Query Tablette ********************* */
 /* **************************************************************** */
 @media (min-width: 768px) and (max-width: 992px) {
-.entete{
+.entete {
     height: 550px;
 }
-.fond-couleur{
+.fond-couleur {
     top: 350px;
 }
 /* Média Query Entête Restaurants  */
@@ -337,52 +363,52 @@ ul {
     font-size: 3rem;
     margin-right: 30%;
 }
-.logo-entete-next i{
+.logo-entete-next i {
     font-size: 30px;  
     margin-left: 0;
     margin-bottom: 2rem;
 }
 
 /*********** Menu restaurants *************/
-.gout h2{
+.gout h2  {
     font-size: 2.5rem;
 }
-.coeur{
+.coeur {
     margin: 0 10% 5% 0;
 }
-.menus-restaurants{
+.menus-restaurants {
     width: 92%;
 }
 
-.entrees p:first-child{
+.entrees p:first-child {
     margin-left: 2rem;
 }
 .entrees > p::after {
     left: 2.2rem;
 }
-.plats p:first-child{
+.plats p:first-child {
     margin-left: 2rem;
 }
 .plats > p::after {
     left: 2.2rem;
 }
-.desserts p:first-child{
+.desserts p:first-child {
     margin-left: 2rem;
 }
 .desserts > p::after {
     left: 2.2rem;
 }
-.menu-texte{
+.menu-texte {
     margin-top: 0.5%;
 }
-.check{
+.check {
     padding-right: 2rem;
     width: 8%;
     right: -13%;
 }
 
 /************* Média query pied de page  ********************/
-.logo-footer{
+.logo-footer {
     font-family: "Shrikhand", "cursive";
     padding-top: 2%;
 }
@@ -399,10 +425,10 @@ ul {
 footer{
     height: 12.5rem;
 }
-.plats p::after, .desserts p::after{
+.plats p::after, .desserts p::after {
     margin-left: 2%;
 }
-.entete{
+.entete {
     height: 550px;
 }
 /*********** Média Query Desktop Entête Restaurants ****************/
@@ -412,12 +438,11 @@ footer{
     font-size: 2.5rem;
     height: 3rem;
     margin-bottom: 1.25rem;
-
 }
-.logo-entete-next a{
+.logo-entete-next a {
     width: 40%;
 }
-.logo-entete-next i{
+.logo-entete-next i {
     font-size: 30px;  
     margin-left: 0;
     margin-bottom: 2rem;
@@ -433,7 +458,7 @@ footer{
     object-fit: cover;
     object-position: center;
 }
-.fond-couleur{
+.fond-couleur {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -441,18 +466,16 @@ footer{
     width: 100%;
     margin: auto;
 }
-.menu-flex{
+.menu-flex {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
 }
-.entrees, .plats, .desserts{
+.entrees, .plats, .desserts {
     width: 30%;
 }
-
-
-.nom-restaurant{
+.nom-restaurant {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
 }
@@ -477,7 +500,7 @@ footer{
     content: "";
     left: 0.5rem;
 }
-.menu-texte h3, .menu-texte p{
+.menu-texte h3, .menu-texte p {
     margin: 3% 0 0 4%;
     height: 50%;
     white-space: nowrap;
@@ -494,7 +517,7 @@ footer{
     content: "";
     left: 0.8rem;
 }
-.desserts p:first-child{
+.desserts p:first-child {
     margin-left: auto;
 }
 .desserts p::after {
@@ -504,17 +527,17 @@ footer{
     content: "";
     left: 1rem;
 }
-.menu-prix{
+.menu-prix {
      width: 20%;
     margin-right: 15%;
  }
-.check{
+.check {
     width: 10%;
     right: -20%;
 }
 
 /********* Média Query Desktop pied de page *****************/
-.logo-footer{
+.logo-footer {
     font-family: "Shrikhand", "cursive";
     padding-top: 2%;
 }
